### April XX 2022, Release version 0.12.0 ###

  * FIXED:
    * the sunlive time was wrongly computed, it has been fixed.
    * the day or night icon wasn't set properly based on sunrise and sunset.
    * an issue in the thread to check postgresql and database has been fixed.
    * fixed a keyerror with a dispatching dictionary.
    * fixed an issue with calibration in MQTT thread.

  * MODIFIED:
    * set_size function has been improved.
    * improved few imports.
    * improved use of comprehension list where it is possible.
    * improved the computation of min and max tick values in time series section.
    * changed the way postgresql, database and tables are checked.
    * few corrections.
    * the calibration methode and values have been transferred to the sensors' dictionary.
    * simplified weather forecast requests.
    * the place object is now a dictionary embedding the old place object.
    * the computation of ephemeris has been moved to a qthread.

  * ADDED
    * a new download thread has been added (part of new update system).
    * a new unzip thread has been added (part of new update system).
    * a new thread to install files has been added (part of new update system).
    * a new thread to countdown and reboot has been added.
    * a new window dedicated to the new update system has been added.
    * the new update system has been introduced in the main gui file.
    * a button and a checkbox have been added to option window to handle the new update system.
    * a hard calibration has been added after few tests at home for temperature coming from DS18B20 and BME280.


### April 1 2022, Release version 0.11.0 ###

  * ADDED:
    * a new numpad has been introduced.
    * a new keyboard has been introduced.
    * a new widget has been introduced.
    * a json file dedicated to sensors has been added.
    * a window and a dictionary to manage mqtt based sensors have been added.